Cleaned up all unused code

--- a/package.json
+++ b/package.json
@@ -1,33 +1,34 @@
 {
-  "name": "cbox-media-ui-client",
+  "name": "media-ui-client",
   "version": "0.2.1",
   "homepage": ".",
   "private": true,
   "dependencies": {
-    "@babel/runtime": "^7.18.0",
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
+    "@babel/runtime": "^7.18.6",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
     "@material-ui/codemod": "^4.5.1",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.61",
-    "@mui/icons-material": "^5.8.0",
-    "@mui/material": "^5.8.1",
-    "@mui/styles": "^5.8.0",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.8.6",
+    "@mui/styles": "^5.8.6",
     "axios": "^0.27.2",
     "bible-passage-reference-parser": "^2.0.1",
     "bible-reference-rcl": "^1.1.0",
     "classnames": "^2.3.1",
     "create-react-class": "^15.7.0",
     "fg-loadcss": "^3.1.0",
-    "i18next": "^21.8.4",
+    "i18next": "^21.8.11",
     "locale2": "^2.3.1",
     "localforage": "^1.10.0",
-    "mdi-material-ui": "^7.3.0",
+    "mdi-material-ui": "^7.4.0",
+    "mkdirp": "^1.0.4",
     "moment": "^2.29.3",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-i18next": "^11.16.9",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-i18next": "^11.17.3",
     "react-lazyload": "^3.2.0",
     "react-player": "^2.10.1",
     "react-scripts": "^5.0.1",
@@ -48,5 +49,10 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "eslint": "^8.18.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-react": "^7.30.1"
+  }
 }
